
	* w32term.c (queue_notifications): Use make_pointer_integer
	instead of XIL.  Put a list of the descriptor, action, and file
	name in event->arg, instead of spreading them between event->code
	and event->arg.

	* keyboard.c (kbd_buffer_get_event) [HAVE_W32NOTIFY]: Adjust Lisp
	event creation to changes in w32term.c and w32inevt.c above.

2015-01-09  Paul Eggert  <eggert@cs.ucla.edu>

	Refactor pointer-to-integer conversion
	* gfilenotify.c (monitor_to_lisp, lisp_to_monitor):
	Rename and move to lisp.h.  All uses changed.
	* lisp.h (XINTPTR, make_pointer_integer): New inline functions,
	which are renamed from gfilenotify.c's lisp_to_monitor and
	monitor_to_lisp, and with more-generic void * signatures.

2015-01-08  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix the value of the column
	returned for right-to-left screen lines.  (Before the change on
	2014-12-30, the incorrectly-computed X pixel coordinate concealed
	this bug.)

	* .gdbinit (xsymname): New subroutine.
	(xprintsym, initial-tbreak): Use it to access the name of a symbol
	in a way that doesn't cause GDB to barf when it tries to
	dereference a NULL pointer.

	* xdisp.c (next_element_from_c_string): Use Lisp integer zero as
	the object.
	(set_cursor_from_row, try_cursor_movement, dump_glyph)
	(insert_left_trunc_glyphs, append_space_for_newline)
	(extend_face_to_end_of_line, highlight_trailing_whitespace)
	(find_row_edges, ROW_GLYPH_NEWLINE_P, Fmove_point_visually)
	(Fbidi_resolved_levels, produce_special_glyphs)
	(rows_from_pos_range, mouse_face_from_buffer_pos)
	(note_mouse_highlight): Use nil as the object for glyphs inserted
	by the display engine, and test with NILP instead of INTEGERP.
	(Bug#19535)

	* w32fns.c (Fx_show_tip): Use NILP to test for glyphs inserted by
	the display engine.

	* xfns.c (Fx_show_tip): Use NILP to test for glyphs inserted by
	the display engine.

	* dispextern.h (struct glyph, struct it): Update comments for the
	OBJECT members.
